# DL-Claude-Code-course

./: .env.example  .gitignore  CLAUDE.md  README.md  frontend-changes.md  pyproject.toml
backend/: DIAGNOSTIC_REPORT.md  ai_generator.py  app.py  config.py  search_tools.py
backend/tests/: conftest.py  run_tests.py  test_ai_generator.py  test_ai_generator_enhanced.py  test_api_endpoints.py  test_integration_real.py  test_rag_system.py  test_rag_system_enhanced.py  test_search_tools.py  test_vector_store.py
data_analysis/: EDA_Refactored.ipynb  README.md  business_metrics.py  dashboard.py  data_loader.py  prompt-convert-to-dashboard.md  prompt.md  requirements.txt
fred-data/: FIGMA-MCP-SETUP.md  README.md  TESTING.md  jest.config.js  jest.setup.js  package-lock.json  package.json  test-figma-mcp.js
fred-data/__tests__/api/: fred-simple.test.ts
fred-data/__tests__/components/: Dashboard.test.tsx  ManufacturingBusinessChart.test.tsx  Sidebar.test.tsx
fred-data/__tests__/services/: fredApi.test.ts
fred-data/__tests__/utils/: test-utils.tsx
fred-data/app/: layout.tsx
fred-data/app/api/fred/[series]/: route.ts
fred-data/app/components/: BuildingPermitsHomeSalesChart.tsx  BusinessInvestmentChart.tsx  CPIChart.tsx  ConsumerSpendingChart.tsx  CreditCardSeasonalChart.tsx  Dashboard.tsx  DollarIndexChart.tsx  EconomicGrowthChart.tsx  EmergingMarketCurrenciesChart.tsx  EmploymentMetricsChart.tsx  FederalFundsRateChart.tsx  HousingMarketChart.tsx  InflationComparisonChart.tsx  InterestRatesLongTermChart.tsx  InterestRatesShortTermChart.tsx  JoblessClaimsWageChart.tsx  LaborStatsChart.tsx  MajorCurrencyPairsChart.tsx  ManufacturingBusinessChart.tsx  PCEInflationChart.tsx  RealEstateInvestmentChart.tsx  RetailSalesCategoryChart.tsx  Sidebar.tsx  TreasuryYieldCurveChart.tsx
fred-data/app/services/: fredApi.ts
frontend/: script.js  style.css
ragchatbot/: README.md  frontend-changes.md  pyproject.toml  query-flow-diagram.md
ragchatbot/backend/: config.py  pytest.ini  rag_system.py  test_results.xml
ragchatbot/backend/tests/: conftest.py  run_tests.py  test_ai_generator.py  test_integration_real.py  test_rag_system_enhanced.py  test_vector_store.py
ragchatbot/frontend/: index.html  style.css
ragchatbot/scripts/: format-code.sh
scripts/: quality-check.sh
